--- a/styles/LandingPage.module.scss
+++ b/styles/LandingPage.module.scss
@@ -59,8 +59,42 @@
         }
       }
     }
+
     .content {
+      h3 {
+        font-family: Helvetica, sans-serif;
+        @include fluid-type(10px, 36px);
+        text-align: center;
+        margin-top: 5%;
+        margin-bottom: 5%;
+      }
       .itemWithImgOnLeft {
+        @include flexbox();
+        @include flex-direction(row);
+        @include align-content(center);
+        @include justify-content(center);
+        border: 2px solid red;
+
+        .imagesContainer {
+          display: grid;
+          position: relative;
+          grid-template-columns: repeat(12, 1fr);
+          border: 2px solid blue;
+          align-items: center;
+
+          .imageContainer {
+            grid-column: 1 / span 7;
+            grid-row: 1;
+            z-index: 1;
+          }
+          .numberContainer {
+            grid-column: 6 / 12;
+            grid-row: 1;
+            font-family: Montserrat;
+            color: #eeeeee;
+            @include fluid-type(180px, 360px);
+          }
+        }
       }
       .itemWithImgOnRight {
       }
