--- a/styles/LandingPage.module.scss
+++ b/styles/LandingPage.module.scss
@@ -73,14 +73,16 @@
         @include flex-direction(row);
         @include align-content(center);
         @include justify-content(center);
-        border: 2px solid red;
 
-        .imagesContainer {
+        padding-left: 15%;
+        padding-right: 15%;
+
+        .contentContainer {
           display: grid;
           position: relative;
           grid-template-columns: repeat(12, 1fr);
-          border: 2px solid blue;
           align-items: center;
+          max-width: 800px;
 
           .imageContainer {
             grid-column: 1 / span 7;
@@ -88,19 +90,93 @@
             z-index: 1;
           }
           .numberContainer {
-            grid-column: 6 / 12;
+            grid-column: 6 / -1;
             grid-row: 1;
             font-family: Montserrat;
             color: #eeeeee;
-            @include fluid-type(180px, 360px);
+            @include fluid-type(100px, 360px);
+          }
+          .textContainer {
+            grid-column: 8 / -1;
+            grid-row: 1;
+            max-width: 100%;
+            margin-left: 1rem;
+            h6 {
+              font-family: Montserrat;
+              color: $teal-highlight;
+              margin-bottom: 7%;
+            }
+            .subtitle {
+              font-family: Helvetica, sans-serif;
+              @include fluid-type(10px, 22px);
+              margin-bottom: 7%;
+              line-height: 145%;
+            }
+            .description {
+              font-family: "Open Sans", sans-serif;
+              font-size: 12px;
+              line-height: 185%;
+            }
           }
         }
       }
+
       .itemWithImgOnRight {
+        @include flexbox();
+        @include flex-direction(row);
+        @include align-content(center);
+        @include justify-content(center);
+        padding-left: 15%;
+        padding-right: 15%;
+        padding-top: 4%;
+
+        .contentContainer {
+          display: grid;
+          position: relative;
+          grid-template-columns: repeat(12, 1fr);
+          align-items: center;
+          max-width: 800px;
+
+          .imageContainer {
+            grid-column: 7 / -1;
+            grid-row: 1;
+            z-index: 1;
+          }
+          .numberContainer {
+            grid-column: 1 / span 7;
+            grid-row: 1;
+            font-family: Montserrat;
+            color: #eeeeee;
+            @include fluid-type(100px, 360px);
+          }
+          .textContainer {
+            grid-column: 1 / span 5;
+            grid-row: 1;
+            max-width: 100%;
+            margin-left: 1rem;
+            text-align: right;
+
+            h6 {
+              font-family: Montserrat;
+              color: $teal-highlight;
+              margin-bottom: 7%;
+            }
+            .subtitle {
+              font-family: Helvetica, sans-serif;
+              @include fluid-type(10px, 22px);
+              margin-bottom: 7%;
+              line-height: 145%;
+            }
+            .description {
+              font-family: "Open Sans", sans-serif;
+              font-size: 12px;
+              line-height: 185%;
+            }
+          }
+        }
       }
     }
   }
 }
-
 .footerContainer {
 }
