--- a/components/LandingPage.module.scss
+++ b/components/LandingPage.module.scss
@@ -1,4 +1,4 @@
-@import "main";
+@import "../styles/main";
 
 .landingPageContainer {
   @include flexbox();
@@ -238,7 +238,6 @@
       }
     }
   }
-
   .line {
     width: 90%;
     height: 1px;
@@ -254,108 +253,5 @@
     @include fluid-type(8px, 12px);
     text-align: center;
     padding-bottom: 1%;
-  }
-}
-
-.quizContainer {
-  color: $pine-green;
-  @include flexbox();
-  @include flex-direction(column);
-  @include align-items(center);
-  font-family: Helvetica, sans-serif;
-  margin-top: 1%;
-  .questionContainer {
-    @include flexbox();
-    @include flex-direction(column);
-    @include align-items(center);
-    margin-top: 2%;
-    margin-right: 2%;
-    margin-left: 2%;
-    .questionCount {
-      font-family: Montserrat;
-      @include fluid-type(12px, 24px);
-      margin: 4%;
-      text-decoration: underline;
-    }
-    .questionText {
-      @include fluid-type(12px, 24px);
-      text-align: center;
-      max-width: 750px;
-      margin-left: 20%;
-      margin-right: 20%;
-      margin-bottom: 2%;
-    }
-  }
-  .answersContainer {
-    @include flexbox();
-    @include flex-direction(row);
-    @include flex-wrap(wrap);
-    @include justify-content(center);
-    @include justify-content(space-around);
-    margin: 1%;
-    max-width: 600px;
-    min-width: 250px;
-    .answerOptionContainer {
-      @include flexbox();
-      @include flex-direction(row);
-      margin: 0.5%;
-      .answerOption {
-        @include fluid-type(16px, 36px);
-        font-family: Montserrat;
-        background-color: $teal-muted;
-        padding: 3%;
-        margin: 1%;
-        &:hover {
-          background-color: $teal-medium;
-        }
-      }
-      .selectedOption {
-        background-color: $teal-highlight;
-        border-color: $pine-green;
-      }
-    }
-  }
-  .backButton {
-    @include fluid-type(12px, 36px);
-    align-self: flex-start;
-    margin-top: 4%;
-    margin-left: 30%;
-    background-color: $teal-highlight;
-    color: $white;
-    border-radius: 4rem;
-    padding: 1%;
-    border: none;
-  }
-}
-
-.resultContainer {
-  color: $pine-green;
-  @include flexbox();
-  @include flex-direction(column);
-  @include align-items(center);
-  font-family: Helvetica, sans-serif;
-  margin-top: 1%;
-  .resultHeader {
-    font-family: Montserrat;
-    @include fluid-type(24px, 30px);
-    margin: 2%;
-    text-decoration: underline;
-  }
-  .resultText {
-    @include fluid-type(20px, 24px);
-    max-width: 550px;
-    text-align: center;
-    line-height: 140%;
-    padding-left: 5%;
-    padding-right: 5%;
-    .successText {
-      @include fluid-type(20px, 24px);
-      padding-left: 5%;
-      padding-right: 5%;
-      line-height: 140%;
-      a {
-        text-decoration: none;
-      }
-    }
   }
 }
